Merge pull request #118, english version for rest.md.